# Teo

./: README.md
entrada/parte_1/: me.cpp  student.cpp
entrada/parte_2/: respuesta.txt
entrada/parte_3/: invertir.cpp
entrada/parte_4/: respuesta.txt
laboratorios/lab01/: README.md  vuelto.scala
laboratorios/lab01/informe-latex/: desarrollo.tex  main.tex  rubricas.tex
laboratorios/lab02/: README.md  diagrama.puml
laboratorios/lab02/informe-latex/: desarrollo.tex  main.tex  rubricas.tex
laboratorios/lab02/l-java/: .gitignore  Main.java  README.md  pom.xml
laboratorios/lab02/l-java/Composicion_y_Agregacion/: Curso.java  Horario.java  Universidad.java
laboratorios/lab02/l-java/Herencia/: Estudiante.java  Persona.java  Profesor.java
laboratorios/lab02/l-javascript/: Persona.mjs  README.md  index.js  index.mjs  package.json
laboratorios/lab02/l-javascript/clases/: Curso.js  Estudiante.js  Horario.js  Persona.js  Profesor.js  Reporte.js  Universidad.js
laboratorios/lab03/: README.md
laboratorios/lab03/informe-latex/: desarrollo.tex  main.tex  rubricas.tex
laboratorios/lab03/l-cpp/: CMakeLists.txt  build_run.sh  trapecio.cpp
laboratorios/lab03/l-cpp/src/: trapecio.cpp  trapecioPool.cpp
laboratorios/lab03/l-go/: build_run.sh  go.mod  go.sum  trapecio.go  trapecioPool.go
laboratorios/lab03/l-java/: Trapecio.java  pom.xml
laboratorios/lab04/ColorListApp/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
laboratorios/lab04/informe-latex/: desarrollo.tex  main.tex  rubricas.tex
laboratorios/lab05/: Readme.md
laboratorios/lab05/ejer01/: contador  contador.cpp
laboratorios/lab05/ejer03/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
laboratorios/lab05/informe-latex/: desarrollo.tex  main.tex  rubricas.tex
laboratorios/lab06/ejer01/: cola.h  main  main.cpp
laboratorios/lab06/ejer02/: contenedor.cpp
laboratorios/lab06/ejer03/: comun.cpp
laboratorios/lab06/informe-latex/: desarrollo.tex  main.tex  rubricas.tex
teoria/continua02/mejorasEnTrapecio/: Trapecio.java  TrapecioPool.java  ValidadorEntradas.java
teoria/continua02/practica04/: Indicaciones.md  settings.gradle
teoria/continua02/practica04/app/: build.gradle
teoria/continua03/AbstractFactory/AbstracFactoryJava/: Application.java  Boton.java  BotonMac.java  BotonWindows.java  DemoAbstractFactory.java  MacFactory.java  README.md  UIFactory.java  Ventana.java  VentanaMac.java  VentanaWindows.java  WindowsFactory.java
teoria/continua03/prac07/: README.md
teoria/continua03/prac07/ejer02/: package.json  (+3 more)
(+42 files in other folders)
